--- a/webeditor/package.json
+++ b/webeditor/package.json
@@ -6,21 +6,38 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
     "format": "yarn prettier --write ."
   },
   "dependencies": {
+    "@storybook/addon-docs": "^6.4.19",
     "@types/react-modal": "^3.13.1",
-    "next": "12.0.7",
+    "bootstrap": "^5.1.3",
+    "next": "^12.1.0",
     "react": "17.0.2",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "17.0.2",
     "react-flow-renderer": "^9.7.2",
+    "react-markdown": "^8.0.0",
     "react-modal": "^3.14.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@storybook/addon-actions": "^6.4.19",
+    "@storybook/addon-essentials": "^6.1.21",
+    "@storybook/addon-interactions": "^6.4.19",
+    "@storybook/addon-links": "^6.4.19",
+    "@storybook/react": "^6.1.21",
+    "@storybook/testing-library": "0.0.9",
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
+    "autoprefixer": "^10.4.2",
+    "babel-loader": "^8.2.3",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
+    "eslint-plugin-storybook": "^0.5.7",
+    "postcss": "^8.4.6",
     "prettier": "^2.5.1",
     "typescript": "4.5.4"
   }
