--- a/webeditor/package.json
+++ b/webeditor/package.json
@@ -20,16 +20,22 @@
     "react-dom": "17.0.2",
     "react-flow-renderer": "^9.7.2",
     "react-markdown": "^8.0.0",
-    "react-modal": "^3.14.4"
+    "react-modal": "^3.14.4",
+    "sass": "^1.49.9",
+    "sass-autoprefixer": "^1.0.1",
+    "sass-loader": "^10"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
     "@storybook/addon-actions": "^6.4.19",
-    "@storybook/addon-essentials": "^6.1.21",
+    "@storybook/addon-essentials": "^6.4.19",
     "@storybook/addon-interactions": "^6.4.19",
     "@storybook/addon-links": "^6.4.19",
-    "@storybook/react": "^6.1.21",
-    "@storybook/testing-library": "0.0.9",
+    "@storybook/builder-webpack5": "^6.4.19",
+    "@storybook/manager-webpack5": "^6.4.19",
+    "@storybook/preset-scss": "^1.0.3",
+    "@storybook/react": "^6.4.19",
+    "@storybook/testing-library": "^0.0.9",
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.2",
